methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:12: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
  }recule(6)
   ^MethodsReturning:13: error: missing parameter type
  if (biscuit=>1){
      ^